# graphz

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  dataset.py  embedding.py  reader.py  sampler.py  settings.py  setup.py  view.py
datasets/: artificial.py  asu_network.py  snap.py  us_powegrid.py
graphz/: dataset.py  embedding.py  link_prediction.py  reader.py  sampler.py  settings.py  utils.py  view.py
graphz/cpp/: array_slice.h  graphz_cpp_module.cc  random_walk.cc  random_walk.h  sampling.cc  sampling.h
graphz/datasets/: asu_network.py  graph_kernel_benchmarks.py  pajek.py  snap.py  zachary.py
graphz/io/: edge_list.py  mtx.py  pajek.py
graphz/tests/: test_graph_dataset.py
